--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -6,6 +6,7 @@ body {
   width: 100%;
   background: url('/assets/images/login_bg.jpg') no-repeat center;
   background-size: cover;
+  overflow: hidden;
 }
 
 .loginAndRegBox {
@@ -21,4 +22,26 @@ body {
 .title-box {
   height: 60px;
   background: url('/assets/images/login_title.png') no-repeat center;
+}
+.layui-form{
+  padding: 0 30px;
+}
+.links{
+  display: flex;
+  justify-content: flex-end;
+}
+.layui-form-item{
+  position: relative;
+}
+.layui-icon{
+  position: absolute;
+  top: 10px;
+  left: 10px;
+}
+.layui-input{
+  padding-left: 35px;
+}
+.header{
+  width: 1200px;
+  margin: 20px auto;
 }
